tools/clang/blink_gc_plugin/tests/raw_ptr_to_gc_managed_class_error.txt
In file included from raw_ptr_to_gc_managed_class_error.cpp:5:
./raw_ptr_to_gc_managed_class_error.h:14:1: error: [blink-gc] Class 'PartObject' contains invalid fields.
class PartObject {
^
./raw_ptr_to_gc_managed_class_error.h:19:5: note: [blink-gc] Raw pointer field 'm_rawObj' to a GC managed class declared here:
    HeapObject* m_rawObj;
    ^
./raw_ptr_to_gc_managed_class_error.h:20:5: note: [blink-gc] Reference pointer field 'm_refObj' to a GC managed class declared here:
    HeapObject& m_refObj;
    ^
./raw_ptr_to_gc_managed_class_error.h:23:1: error: [blink-gc] Class 'HeapObject' contains invalid fields.
class HeapObject : public GarbageCollected<HeapObject> {
^
./raw_ptr_to_gc_managed_class_error.h:29:5: note: [blink-gc] Raw pointer field 'm_objs' to a GC managed class declared here:
    HeapVector<HeapObject*> m_objs;
    ^
2 errors generated.
